# class_rust

./: Cargo.toml  README.md
assignment1/src/: main.rs
assignment2/src/: main.rs
assignment3/src/: main.rs
bootcamp1/src/: fibonnaci.rs  main.rs
bootcamp2/: Cargo.toml
bootcamp2/src/: char_counts.rs  lambda.rs  main.rs  numbers.rs  use_match.rs  vector.rs
bootcamp3/: Cargo.toml
c_to_rust/: Cargo.toml
c_to_rust/src/: double.c  lib.rs  main.c  main.rs
class_4/: Cargo.toml
class_4/src/: check.rs  main.rs
class_5/src/: main.rs  result.rs
practise1/: Cargo.toml
practise1/src/: main.rs
practise_1/src/: main.rs  shop.rs
practise_2/src/: main.rs  message.rs  thread_vec.rs
practise_3/: Cargo.toml
practise_3/src/: main.rs
practise_4/: Cargo.toml
practise_4/src/: main.rs
practise_5/: Cargo.toml
project/src/: library.rs  main.rs
rectangle/src/: area.rs  main.rs
src/: main.rs  sol.rs
task1/src/: main.rs
task1/src/game_chess/: game.rs
task2/src/: main.rs
task3/src/: calculator.rs  main.rs
task3/src/game_play/: games.rs
task4/src/: file.rs  inputation.rs  main.rs  occupation.rs  vector.rs
task5/src/: examp.rs  game.rs  generic_enums.rs  generic_solutions.rs  generic_struc.rs  main.rs  values.rs  vehicle.rs
task6/src/: area.rs  gene_trats.rs  main.rs  multiply.rs  news.rs  person.rs
task7/src/: even.rs  main.rs  names.rs
task8/src/: main.rs
task9/src/: lib.rs
