workspace = { members = [ "Assignment1", "assignment2", "assignment3", "bootcamp", "bootcamp1", "bootcamp2", "bootcamp3", "class_4", "class_5", "practise1","project", "rectangle", "task1", "task2", "task3", "task4", "task5", "task6", "task7", "task8", "task9"] }
[package]
name = "class_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_math = "0.3.7"
